# fastapi-simple-auth

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  Dockerfile.local  docker-compose.yaml
docs/: APPLE_OAUTH.md  DEFAULT.md  GOOGLE_OAUTH.md  KAKAO_OAUTH.md  NAVER_OAUTH.md  google_oauth.md
project/: gunicorn_conf.py
project/app/: main.py
project/app/core/: auth.py  exception.py
project/db/crud/: abstract.py  crud_permissions.py  crud_roles.py  crud_roles_permissions.py  crud_token.py  crud_user.py
project/dependencies/: auth.py
project/internal/: config.py  logging.py
project/models/: groups.py  mixin.py  roles.py  token.py  user.py  user_groups.py
project/schemas/: auth.py  permissions.py  roles.py  token.py  user.py
project/security/: encryption.py
sql/: init.sql
src/: .env.exmaple  gunicorn_conf.py
src/app/: factory.py  main.py
src/app/api/: auth.py  permissions.py  roles.py  signup.py  token.py  user.py
src/app/core/: exception.py  responses.py
src/core/: config.py  exceptions.py  logging.py  responses.py
src/crud/: __init__.py  crud_token.py  crud_user.py
src/db/: base.py
src/db/crud/: crud_roles_permissions.py  crud_token.py  crud_users_roles.py
src/dependencies/: auth.py  database.py  http.py
src/helper/: naver_oauth.py
src/html/apple/: login.html
src/html/google/: login.html
src/internal/: config.py  logging.py
src/models/: __init__.py  mixin.py  permissions.py  token.py  user.py
src/schemas/: __init__.py  login.py  register.py  response.py  responses.py  roles.py  signup.py  token.py
src/utils/: random.py  strings.py  validators.py
(+24 files in other folders)
